2001-08-23  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* win/tclWinPipe.c (BuildCommandLine): Fixed tcl Bug
	  [432499]. Part of the code used the non-absolute path to the
	  executable to determine quoting. This failed if the absolute
	  path cotained spaces, but the application name itselfl not. This
	  bug caused no trouble on Win NT 5, but does for other variants
	  in the Win* family. Report and fix due to Ken Poole
	  <kenpoole@users.sourceforge.net>.

2001-08-23  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/configure:
	* unix/tcl.m4: added QNX-6 build support. [Bug #219410] (loverso)

	* unix/tclUnixFCmd.c:
	* generic/tclIOUtil.c:
	* generic/tclFileName.c: corrected minor compiler warnings.

2001-08-24 Vince Darley <vincentdarley@users.sourceforge.net>

	Variety of small filesystem and vfs issues fixed or improved.
	The new fs code allows many new opportunities for efficiency
	improvements through the objectified API. The main changes
	integrated here are such efficiency improvements.  Some
	limitations of the original implementation have also now been
	lifted.  Meanwhile a variety of fs bugs (some old, some new)
	have also been fixed.
	
	* generic/tclFileName.c: Made Tcl_FSSplitPath more efficient, 
	and removed some static string-based procedures which are no 
	longer used.  Much more objectification.  Tcl_FSJoinPath
	is now very efficient and more aware of virtual filesystems.
	Clarified where the Mac-specific code attempts to interpret
	Unix-style paths.  Modified TclDoGlob to use lstat not
	access to fix [Bug: 434876, L. Virden]
	* tcl(Win|Unix|Mac)FCmd.c:
	* tcl(Win|Unix|Mac)File.c: replaced TclpListVolumes with
	TclpObjListVolumes with different signature, updated code due
	to more efficient signature of Tcl_FSGetTranslatedPath.  Used
	cached native paths where possible to improve efficiency --
	this was completed on MacOS, but on Unix and Win the traversal
	functions make the task much more complex, so there are still