@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: unixInit.test,v 1.21 2001/07/12 16:26:57 dgp Exp $
+# RCS: @(#) $Id: unixInit.test,v 1.22 2001/08/24 14:59:20 dgp Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -269,7 +269,9 @@ test unixInit-2.9 {TclpInitLibraryPath: paths relative to executable} {
     file delete -force /tmp/library
     set x
 } [list /tmp/lib/tcl[info tclversion] /lib/tcl[info tclversion] \
-	/tmp/library /library /tcl[info patchlevel]/library]
+        /tmp/library /library [format /tcl%s/library \
+        [expr {[regexp {[ab]} [info patchlevel]] ?
+        [info patchleve] : [info tclversion]}]]]
 test unixInit-3.1 {TclpSetInitialEncodings} {unixOnly installedTcl} {
     set env(LANG) C
 
